onprem/application/apjung-backend/prod/Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apjung-backend-prod-deploy
  namespace: prod
  labels:
    app.kubernetes.io/name: apjung-backend-prod
    app.kubernetes.io/instance: apjung-backend-prod-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: apjung-backend-prod-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apjung-backend-prod
        app.kubernetes.io/instance: apjung-backend-prod-pod
    spec:
      imagePullSecrets:
        - name: dockerhub-secrets
      containers:
        - name: apjung-backend
          image: labyu/apjung-backend:prod-15
          ports:
            - containerPort: 8080

          imagePullPolicy: Always
