onprem/application/apjung-backend/prod/apjung-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apjung-backend-svc
  namespace: prod
spec:
  ports:
    - name: was
      port: 8080
      targetPort: 8080
  selector:
    app: apjung-backend-pod
  type: ClusterIP
