onprem/application/apjung-backend/prod/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apjung-backend-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 1g

spec:
  tls:
  - hosts:
      - api.apjung.me
    secretName: tls-secret
  rules:
  - host: api.apjung.me
    http:
      paths:
      - path: /
        backend:
          serviceName: apjung-backend-svc
          servicePort: 8080
